--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -5,6 +5,14 @@
     <title>API simple</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="index.php?route=read-all-users">Liste des utilisateurs</a></li>
+            <li><a href="index.php?route=create-user">Nouvel utilisateur</a></li>
+            <li><a href="index.php?route=edit-user">Modifier un utilisateur</a></li>
+            <li><a href="index.php?route=delete-user">Supprimer un utilisateur</a></li>
+        </ul>
+    </header>
     <?php
         require $template;
     ?>
