--- a/views/users/user.phtml
+++ b/views/users/user.phtml
@@ -1,7 +1,9 @@
+<?php $user = $data[0] ?>
+
 <h1>Informations de l'utilisateur</h1>
 <ul>
-    <li>ID : <?= $data[0]->getId()?></li>
-    <li>Prénom : <?= $data[0]->getFirstName()?></li>
-    <li>Nom : <?= $data[0]->getLastName()?></li>
-    <li>Email : <?= $data[0]->getEmail()?></li>
+    <li>ID : <?= $user->getId()?></li>
+    <li>Prénom : <?= $user->getFirstName()?></li>
+    <li>Nom : <?= $user->getLastName()?></li>
+    <li>Email : <?= $user->getEmail()?></li>
 </ul>
